--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -125,6 +125,7 @@
                             <table class="table" id="tablaProyectos">
                                 <thead class="table-success">
                                     <tr>
+                                        <!--<th scope="col" hidden>Activar Fechas</th>-->
                                         <th scope="col">Proyecto - BAU</th>
                                         <th scope="col">Tipo de Proyecto</th>
                                         <th scope="col">Responsable(s)</th>
@@ -142,11 +143,14 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let proyecto of listaProyectos; let i = index">
+                                        <!--<td scope="row" hidden >
+                                            <input type="checkbox" (change)="onChecked()">
+                                        </td>-->
                                         <th scope="row">{{ proyecto.proyectoResponse.proyecto  | uppercase }}</th>
                                         <td>{{ proyecto.detalleProyectoResponse.tipoProyecto  | uppercase}}</td>
                                         <td>MARCO RUIZ</td>
                                         <td>
-                                            <input type="number" class="form-control"  value="{{ proyecto.detalleProyectoResponse.hrsAtencion }}"  [(ngModel)]="listaProyectos[i].detalleProyectoResponse.hrsAtencion">
+                                            <input type="number" min="0" class="form-control"  value="{{ proyecto.detalleProyectoResponse.hrsAtencion }}"  [(ngModel)]="listaProyectos[i].detalleProyectoResponse.hrsAtencion">
                                         </td>
                                         <td>
                                             <input type="date" class="form-control" size="1"
@@ -183,7 +187,7 @@
                                             </select>
                                         </td>
                                         <td>
-                                            <input type="number" class="form-control"  size="0" value="{{proyecto.detalleProyectoResponse.avance}}" [(ngModel)]="listaProyectos[i].detalleProyectoResponse.avance"/>
+                                            <input type="number" min="0" class="form-control"  size="0" value="{{proyecto.detalleProyectoResponse.avance}}" [(ngModel)]="listaProyectos[i].detalleProyectoResponse.avance"/>
                                         </td>
                                         <td>
                                             <!--<select class="form-select" id="documentacionProy" [(ngModel)]="proyecto.detalleProyectoResponse.docProy" (ngModelChange)="modelChangeDocumentacion($event)">
@@ -199,7 +203,7 @@
                                             </button>
                                         </td>
                                         <td>
-                                            <button  (click)="guardarCambio(listaProyectos[i].detalleProyectoResponse)"  class="btn btn-success mx-2">
+                                            <button  (click)="guardarCambio(listaProyectos[i].detalleProyectoResponse, listaProyectos[i].proyectoResponse.idProyecto)"  class="btn btn-success mx-2">
                                                 Guardar 
                                             </button>
                                         </td>
