--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,18 +15,18 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ">
       <li class="nav-item">
-        <a class="nav-link" routerLink='' style="color:#ffffff">Proyectos | BAU</a>
+        <a class="nav-link" [ngClass]="clasetextoProyectos" (click)="clickProyectos()" routerLink='' style="color:#ffffff">Proyectos | BAU</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink='Certificaciones/Envio' style="color:#ffffff">Tickets</a>
+        <a [ngClass]="clasetextoTicket" (click)="clickTickets()"  routerLink='Certificaciones/Envio' style="color:#ffffff">Tickets</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink='/Certificaciones/BIM' style="color:#ffffff">Reporte DC</a>
+        <a  [ngClass]="clasetextoReporte" (click)="clickReporteDC()" routerLink='/Certificaciones/BIM' style="color:#ffffff">Reporte DC</a>
       </li>
     </ul>
     <ul class="navbar-nav  ms-auto">
       <li>
-        <a class="nav-link mx-4" style="font-size:larger; color:#ffffff">Luis Angel Lozano Rosales</a>
+        <a class="nav-link mx-4 " style="font-size:larger; color:#ffffff">Luis Angel Lozano Rosales</a>
       </li>
       <li>
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36">
@@ -45,5 +45,9 @@
 <div class="m-4">
   <router-outlet></router-outlet>
 </div>
-
+<style>
+  .negrita {
+    font-weight: 700;
+  }
+</style>
 
