--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -153,12 +153,12 @@
                                             <input type="number" min="0" class="form-control"  value="{{ proyecto.detalleProyectoResponse.hrsAtencion }}"  [(ngModel)]="listaProyectos[i].detalleProyectoResponse.hrsAtencion">
                                         </td>
                                         <td>
-                                            <input type="date" class="form-control" size="1"
+                                            <input type="date" class="form-control" size="1" [disabled]="proyecto.detalleProyectoResponse.docProy != 'RI | RD'"
                                                 value="{{proyecto.detalleProyectoResponse.fechaInicio}}" [(ngModel)]="listaProyectos[i].detalleProyectoResponse.fechaInicio"
                                             />
                                         </td>
                                         <td>
-                                            <input type="date" class="form-control" size="1"
+                                            <input type="date" class="form-control" size="1" [disabled]="proyecto.detalleProyectoResponse.docProy != 'RI | RD'"
                                                 value="{{proyecto.detalleProyectoResponse.fechaFin}}"  [(ngModel)]="listaProyectos[i].detalleProyectoResponse.fechaFin"
                                             />
                                         </td>
