--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         <a class="nav-link" [ngClass]="clasetextoProyectos" (click)="clickProyectos()" routerLink='' style="color:#ffffff">Proyectos | BAU</a>
       </li>
       <li class="nav-item">
-        <a [ngClass]="clasetextoTicket" (click)="clickTickets()"  routerLink='Certificaciones/Envio' style="color:#ffffff">Tickets</a>
+        <a [ngClass]="clasetextoTicket" (click)="clickTickets()"  routerLink='Tickets' style="color:#ffffff">Tickets</a>
       </li>
       <li class="nav-item">
         <a  [ngClass]="clasetextoReporte" (click)="clickReporteDC()" routerLink='/Certificaciones/BIM' style="color:#ffffff">Reporte DC</a>
