--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         <a [ngClass]="clasetextoTicket" (click)="clickTickets()"  routerLink='Tickets' style="color:#ffffff">Tickets</a>
       </li>
       <li class="nav-item">
-        <a  [ngClass]="clasetextoReporte" (click)="clickReporteDC()" routerLink='/Certificaciones/BIM' style="color:#ffffff">Reporte DC</a>
+        <a  [ngClass]="clasetextoReporte" (click)="clickReporteDC()" routerLink='ReportesDC' style="color:#ffffff">Reporte DC</a>
       </li>
     </ul>
     <ul class="navbar-nav  ms-auto">
