--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ">
       <li class="nav-item">
-        <a class="nav-link" [ngClass]="clasetextoProyectos" (click)="clickProyectos()" routerLink='' style="color:#ffffff">Proyectos | BAU</a>
+        <a class="nav-link" [ngClass]="clasetextoProyectos" (click)="clickProyectos()" routerLink='Proyectos' style="color:#ffffff">Proyectos | BAU</a>
       </li>
       <li class="nav-item">
         <a [ngClass]="clasetextoTicket" (click)="clickTickets()"  routerLink='Tickets' style="color:#ffffff">Tickets</a>
