--- a/src/app/reportes/reportes.component.html
+++ b/src/app/reportes/reportes.component.html
@@ -12,7 +12,7 @@
                   <div class="col-3">
                     <div class="form-floating">
                       <select class="form-select" name="datasource">
-                        <option></option>
+                        <option>Individual BIM [Individual]</option>
                       </select>
                       <label for="floatingSelect">Recurso</label>
                     </div>
@@ -308,11 +308,11 @@
                           </thead>
                           <tbody>
                             <tr class="odd">
-                              <th class="">6</th>
+                              <th class="">11</th>
                               <td class="">0</td>
-                              <td class="">4</td>
+                              <td class="">6</td>
                               <td class="">0</td>
-                              <td class="">2</td>
+                              <td class="">5</td>
                             </tr>
                           </tbody>
                         </table>
