colores reporte DC

--- a/src/app/reportes/reportes.component.html
+++ b/src/app/reportes/reportes.component.html
@@ -50,37 +50,43 @@
                         <tbody>
                           <tr>
                             <td>Se registra trabajo devengado de los recursos en 10 proyectos de 11</td>
-                            <td>19/12/23 12:00</td>
-                            <td>19:12:23 12:02</td>
-                            <td>Open</td>
-                            <td>Medio</td>
-                            <td>Individual BIM (Individual)</td>
+                            <td >Gestión de recurso</td>
+                            <td >100 %</td>
+                            <td class="amarillo">100 %</td>
+                            <td class="rojo">91 %</td>
+                            <td class="rojo">82</td>
                           </tr>
                           <tr>
                             <td>Se registra 3 proyectos en tiempo o por iniciar de 11</td>
-                            <td>18/12/23 20:08</td>
-                            <td>19:12:23 13:40</td>
-                            <td>Open</td>
-                            <td>Medio</td>
-                            <td>Individual BIM (Individual)</td>
+                            <td>Gestión de planeación</td>
+                            <td >27 %</td>
+                            <td class="amarillo">27 %</td>
+                            <td class="amarillo">27 %</td>
+                            <td class="amarillo">27 %</td>
                           </tr>
                           <tr>
                             <td>Se registra avance en 6 proyectos de 10</td>
-                            <td>18/12/2023 11:22</td>
-                            <td>18/12/2023 11:23</td>
-                            <td>Open</td>
-                            <td>Medio</td>
-                            <td>Individual BIM (Individual)</td>
+                            <td>Gestión de avance</td>
+                            <td>72 %</td>
+                            <td class="amarillo">72 %</td>
+                            <td class="rojo">60 %</td>
+                            <td class="amarillo">60 %</td>
                           </tr>
                           <tr>
                             <td>Se registra 7 proyectos de 11 con documentación</td>
-                            <td>15/12/2023 16:17</td>
-                            <td>18/12/2023 13:37</td>
-                            <td>Resolved</td>
-                            <td>Medio</td>
+                            <td>Gestión de soporte documental</td>
+                            <td>63 %</td>
+                            <td class="amarillo">63 %</td>
+                            <td class="amarillo">63 %</td>
+                            <td class="amarillo">63 %</td>
                           </tr>
                           <tr>
-                            <td>Total</td>
+                            <th>Total</th>
+                            <td></td>
+                            <th>65.5 %</th>
+                            <th class="amarillo">65.5 %</th>
+                            <th class="rojo">60.25 %</th>
+                            <th class="rojo">58 %</th>
                           </tr>
                         </tbody>
                       </table>
