--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,13 +8,13 @@
   <!--Navbar links-->
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ">
-      <li class="nav-item">
+      <li class="nav-item border-end">
         <a class="nav-link" [ngClass]="clasetextoProyectos" (click)="clickProyectos()" routerLink='Proyectos' style="color:#ffffff">Proyectos | BAU</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item border-end">
         <a [ngClass]="clasetextoTicket" (click)="clickTickets()"  routerLink='Tickets' style="color:#ffffff">Tickets</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item border-end">
         <a  [ngClass]="clasetextoReporte" (click)="clickReporteDC()" routerLink='ReportesDC' style="color:#ffffff">Reporte DC</a>
       </li>
     </ul>
