--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -1,4 +1,67 @@
 <div class="row">
+  <div class="col-12 mb-5">
+      <div class="card">
+          <div class="card-body">
+              <!--Agregar Archivo-->
+              <div class="row">
+                  <div class="col-12">
+                      <div class="card">
+                          <div class="card-body">
+                              <h6 class="card-title">Agregar Información</h6>
+                              <div class="row">
+                                  <div class="col-2">
+                                      <div class="form-floating">
+                                          <input type="file" class="form-control" id="file"/>
+                                          <label for="file">Cargar Archivo</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-1 mt-3">
+                                      <button class="btn btn-primary" >Agregar</button>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-12">
+                  <div class="table-responsive">
+                    <table class="table" id="tablaProyectos">
+                      <thead class="table-success">
+                        <tr>
+                          <th scope="col">Nombre del Archivo</th>
+                          <th scope="col">Fecha de carga</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">Ticket_020124.xlsx</th>
+                          <td>02/01/24 12:00:28</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ticket_100124.xlsx</th>
+                          <td>10/01/24 20:08:15</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ticket_180124.xlsx</th>
+                          <td>18/01/2024 11:22:11</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">Ticket_280124.xlsx</th>
+                          <td>28/01/2024 16:17:16</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+              <!-- Fin Tabla -->
+          </div>
+      </div>
+  </div>
+</div>
+<div class="row">
   <div class="col-12">
     <div class="card">
       <div class="card-body">
@@ -135,68 +198,5 @@
         <!-- Fin Tabla -->
       </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-12 mb-5">
-      <div class="card">
-          <div class="card-body">
-              <!--Agregar Archivo-->
-              <div class="row">
-                  <div class="col-12">
-                      <div class="card">
-                          <div class="card-body">
-                              <h6 class="card-title">Agregar Información</h6>
-                              <div class="row">
-                                  <div class="col-2">
-                                      <div class="form-floating">
-                                          <input type="file" class="form-control" id="file"/>
-                                          <label for="file">Cargar Archivo</label>
-                                      </div>
-                                  </div>
-                                  <div class="col-1 mt-3">
-                                      <button class="btn btn-primary" >Agregar</button>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <br />
-              <div class="row">
-                <div class="col-12">
-                  <div class="table-responsive">
-                    <table class="table" id="tablaProyectos">
-                      <thead class="table-success">
-                        <tr>
-                          <th scope="col">Nombre del Archivo</th>
-                          <th scope="col">Fecha de carga</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">Tickets Semana 1 2024</th>
-                          <td>02/01/24 12:00:28</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Tickets Semana 2 2024</th>
-                          <td>10/01/24 20:08:15</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Tickets Semana 3 2024</th>
-                          <td>18/01/2024 11:22:11</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Tickets Semana 4 2024</th>
-                          <td>28/01/2024 16:17:16</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
-              <!-- Fin Tabla -->
-          </div>
-      </div>
   </div>
 </div>
