--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,13 +17,16 @@
       <li class="nav-item border-end">
         <a  [ngClass]="clasetextoReporte" (click)="clickReporteDC()" routerLink='ReportesDC' style="color:#ffffff">Reporte DC</a>
       </li>
+      <li class="nav-item border-end" *ngIf="configuracion == true">
+        <a  [ngClass]="clasetextoConfig" style="color:#ffffff">Configuración</a>
+      </li>
     </ul>
     <ul class="navbar-nav  ms-auto">
       <li>
         <a class="nav-link mx-4 " style="font-size:larger; color:#ffffff">Luis Angel Lozano Rosales</a>
       </li>
       <li>
-        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36">
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" (click)="clickConfig()" routerLink='Configuracion'>
           <path id="Icon_simple-coderwall" data-name="Icon simple-coderwall" d="M32.031,28.062a3.969,3.969,0,1,1-3.969,3.969,3.971,3.971,0,0,1,3.969-3.969ZM18,14.031A3.969,3.969,0,1,1,14.031,18,3.972,3.972,0,0,1,18,14.031Zm14.031,0A3.969,3.969,0,1,1,28.062,18a3.972,3.972,0,0,1,3.969-3.969ZM18,0a3.969,3.969,0,1,1-3.969,3.969A3.971,3.971,0,0,1,18,0ZM3.969,0A3.969,3.969,0,1,1,0,3.969,3.971,3.971,0,0,1,3.969,0ZM32.031,0a3.969,3.969,0,1,1-3.969,3.969A3.971,3.971,0,0,1,32.031,0Z" fill="#fff"/>
         </svg>
       </li>
