--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -266,6 +266,7 @@
                         <th scope="col">ID</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Estatus</th>
+                        <th scope="col">Editar</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -273,11 +274,21 @@
                         <td>1</td>
                         <th>Subdirección</th>
                         <td>Activo</td>
+                        <td>
+                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalComentariosGerencia">
+                            ...
+                          </button>
+                        </td>
                       </tr>
                       <tr>
                         <td>2</td>
                         <th>Gerente</th>
                         <td>Activo</td>
+                        <td>
+                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalComentariosGerencia">
+                            ...
+                          </button>
+                        </td>
                       </tr>
                     </tbody>
                   </table>
